--- a/index.html
+++ b/index.html
@@ -24,18 +24,37 @@
             <div><span>Jason</span><span class="last-name">Gerlach</span></div>
           </div>
           <div class="navi-btns">
-            <div class="navi-btn"><a class="header-a" href="#">Who</a></div>
-            <div class="navi-btn"><a class="header-a" href="#">What</a></div>
-            <div class="navi-btn"><a class="header-a" href="#">Where</a></div>
-            <div class="navi-btn"><a class="header-a" href="#">When</a></div>
-            <div class="navi-btn"><a class="header-a" href="#">Why</a></div>
-            <div class="navi-btn"><a class="header-a" href="#">How</a></div>
+            <div class="navi-btn"><a class="header-a" href="#who">Who</a></div>
+            <div class="navi-btn"><a class="header-a" href="#what">What</a></div>
+            <div class="navi-btn"><a class="header-a" href="#where">Where</a></div>
+            <div class="navi-btn"><a class="header-a" href="#when">When</a></div>
+            <div class="navi-btn"><a class="header-a" href="#why">Why</a></div>
+            <div class="navi-btn"><a class="header-a" href="#how">How</a></div>
           </div>
         </div>
       </header>
 
       <main>
         <div class="intro-img"></div>
+        <div class="about-section-1" id="who">
+          <div class="about-title"> Who am I?</div>
+
+        </div>
+        <div class="about-section-2" id="what">
+          <div class="about-title"> What I Like </div>
+        </div>
+        <div class="about-section-3" id="where">
+          <div class="about-title"> Where I am from!</div>
+        </div>
+        <div class="about-section-2" id="when">
+          <div  class="about-title"> When; a timeline of me!</div>
+        </div>
+        <div class="about-section-1" id="why">
+          <div class="about-title"> Why don't you ask me a question?</div>
+        </div>
+        <div class="about-section-2" id="how">
+          <div class="about-title"> How to contact me?</div>
+        </div>
 
       </main>
 
