--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         </div>
         <div class="about-section-2" id="what">
-          <div class="about-title"> What I Like </div>
+          <div class="about-title"> What I Like!</div>
         </div>
         <div class="about-section-3" id="where">
           <div class="about-title"> Where I am from!</div>
@@ -51,7 +51,18 @@
         </div>
         <div class="about-section-1" id="why">
           <div class="about-title"> Why don't you ask me a question?</div>
-        </div>
+            <div class="center">
+              <input class="name-field" placeholder="Email" type="email">
+            </div>
+            <div class="center">
+              <textarea class="question-field" placeholder="Ask Away!"></textarea>
+            </div>
+            <div class="center">
+              <div class="btn-container">
+                <button class="question-submit">Sumbit</button>
+              </div>
+            </div>
+        </div class="center">
         <div class="about-section-2" id="how">
           <div class="about-title"> How to contact me?</div>
         </div>
