--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="navi-btn"><a class="header-a" href="#where">Where</a></div>
             <div class="navi-btn"><a class="header-a" href="#when">When</a></div>
             <div class="navi-btn"><a class="header-a" href="#why">Why</a></div>
-            <div class="navi-btn">How</a></div>
+            <div class="navi-btn"><a class="header-a" href="#how">How</a></div>
           </div>
         </div>
       </header>
