Grammer fix for where

--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
             <div class="place-container place-1">
               <div class="place-img redding"></div>
               <div class="place-title"><a href="https://en.wikipedia.org/wiki/Redding,_California" target="_blank">Redding California</a></div>
-              <div class="place-info">I spent most of my life in <a href="https://en.wikipedia.org/wiki/Redding,_California" target="_blank">Redding California</a>. It is where I grew up and all my best friends are from here. It has two lakes and Mount Shasta is close by. It is a great place for being outdoors.</div>
+              <div class="place-info">I spent most of my life in <a href="https://en.wikipedia.org/wiki/Redding,_California" target="_blank">Redding California</a>. It is where I grew up. All my best friends are from here. It has two lakes and Mount Shasta is close by. It is a great place for being outdoors.</div>
             </div>
             <div class="place-container place-2">
               <div class="place-img ashland"><a href=""></a></div>
               <div class="place-title"><a href="https://en.wikipedia.org/wiki/Ashland,_Oregon" target="_blank">Ashland Oregon</a></div>
-              <div class="place-info">For a short time I lived in a small town called <a href="https://en.wikipedia.org/wiki/Ashland,_Oregon" target="_blank">Ashland Oregon</a>. Even though I lived in here for only one year I made lots of new friends and went on many adventures. I would snowboard the local mountain daily. </div>
+              <div class="place-info">For a short time I lived in a small town called <a href="https://en.wikipedia.org/wiki/Ashland,_Oregon" target="_blank">Ashland Oregon</a>. Even though I lived here for only one year I made lots of new friends and went on many adventures. I would snowboard the local mountain daily. </div>
             </div>
             <div class="place-container place-3">
               <div class="place-img sd"><a href=""></a></div>
               <div class="place-title"><a href="https://en.wikipedia.org/wiki/San_Diego" target="_blank">San Diego California</a></div>
-              <div class="place-info">I currently live in <a href="https://en.wikipedia.org/wiki/San_Diego" target="_blank">San Diego California</a> and I love it. I enjoy cruising the beach on my bike and trying the local breweries. There are a lot more events to go to like concerts and comedy shows which I am fond of.</div>
+              <div class="place-info">I currently live in <a href="https://en.wikipedia.org/wiki/San_Diego" target="_blank">San Diego California</a> and I love it. I enjoy cruising the beach on my bike and trying the local breweries. There are a lot of events to go to like concerts and comedy shows which I am fond of.</div>
             </div>
           </div>
         </div>
