--- a/index.html
+++ b/index.html
@@ -90,8 +90,23 @@
               </div>
             </div>
         </div class="center">
-        <div class="about-section-2" id="how">
+        <div class="about-section-3 how" id="how">
           <div class="about-title"> How to contact me?</div>
+          <a href="https://github.com/jsngerlach" target="_blank">
+            <div class="contact-link">Github</div>
+          </a>
+          <a href="https://teamtreehouse.com/jasongerlach" target="_blank">
+            <div class="contact-link">Team Treehouse</div>
+          </a>
+          <a href="https://www.linkedin.com/in/jason-gerlach-41a9a312a/" target="_blank">
+            <div class="contact-link">LinkedIn</div>
+          </a>
+          <a href="https://twitter.com/JasonGerlach1" target="_blank">
+            <div class="contact-link">Twitter</div>
+          </a>
+          <a href=" https://github.com/jsngerlach/personal-website-simple" target="_blank">
+            <div class="contact-link">Want the code for this project? Click Here!</div>
+          </a>
         </div>
 
       </main>
