Huge edit who, why, how fixed alignment bugs

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         </div>
         <div class="about-section-1" id="who">
           <div class="about-title"> Who am I?</div>
-
+          <div class="avatar"></div>
+          <div class="who-info">My name is Jason Gerlach. I enjoy coding gaming lifting weights and food. I live in San Diego CA. I am a React Developer primarily but am always interested in learning new frameworks and technologies. I have worked for multiple start up companies. The energy and excitement is a great environment to be in. My favorite thing to do is snowboard.</div>
         </div>
         <div class="about-section-2" id="what">
           <div class="about-title"> What I Like!</div>
@@ -77,19 +78,16 @@
           <div  class="about-title"> When; a timeline of me!</div>
         </div>
         <div class="about-section-1" id="why">
-          <div class="about-title"> Why don't you ask me a question?</div>
-            <div class="center">
-              <input class="name-field" placeholder="Email" type="email">
-            </div>
-            <div class="center">
-              <textarea class="question-field" placeholder="Ask Away!"></textarea>
-            </div>
-            <div class="center">
-              <div class="btn-container">
-                <button class="question-submit">Sumbit</button>
+          <div class="about-title"> Why don't you make your own personal website?</div>
+          <div class="center">
+            <a href=" https://github.com/jsngerlach/personal-website-simple" target="_blank">
+              <div class="code-btn">
+                <div class="code-btn-img"></div>
+                <div class="btn-text">Press the Button for Code!</div>
               </div>
-            </div>
-        </div class="center">
+            </a>
+          </div>
+        </div>
         <div class="about-section-3 how" id="how">
           <div class="about-title"> How to contact me?</div>
           <a href="https://github.com/jsngerlach" target="_blank">
@@ -103,9 +101,6 @@
           </a>
           <a href="https://twitter.com/JasonGerlach1" target="_blank">
             <div class="contact-link">Twitter</div>
-          </a>
-          <a href=" https://github.com/jsngerlach/personal-website-simple" target="_blank">
-            <div class="contact-link">Want the code for this project? Click Here!</div>
           </a>
         </div>
 
