--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome</title>
+    <title>JEG Personal Website</title>
+
+    <!-- Site Icon -->
+    <link rel="icon" href="./images/profile-icon.jpg" type="image/gif" sizes="16x16">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Baloo+Tammudu|Josefin+Sans" rel="stylesheet">
     <!-- CSS Page -->
@@ -53,6 +56,26 @@
         </div>
         <div class="about-section-2" id="what">
           <div class="about-title"> What I Like!</div>
+          <div class="what-item">
+            <div class="what-icon code-icon"></div>
+            <div class="what-info">I like to code because I like to create. If you can dream it you can do it with coding.</div>
+          </div>
+          <div class="what-item">
+            <div class="what-icon mtn-icon"></div>
+            <div class="what-info"> I like to snowboard because it is theraputic. Snowbaording no matter what skill level is always a great time.</div>
+          </div>
+          <div class="what-item">
+            <div class="what-icon weight-icon"></div>
+            <div class="what-info">I like to lift weights because it feels good. It helps keep my energy levels high and me healthy.</div>
+          </div>
+          <div class="what-item">
+            <div class="what-icon bike-icon"></div>
+            <div class="what-info">I like to ride my bicycle, I like to ride my bike. It is so fun to ride my beach cruiser to the ocean and feel the see breeze.</div>
+          </div>
+          <div class="what-item">
+            <div class="what-icon gamer-icon"></div>
+            <div class="what-info">I like to play video games because I like overcoming challenges. Always a fun fallback of entertainment whether it is a sports game or a fantasy game.</div>
+          </div>
         </div>
         <div class="about-section-3" id="where">
           <div class="about-title"> Where I am from!</div>
@@ -103,13 +126,7 @@
             <div class="contact-link">Twitter</div>
           </a>
         </div>
-
       </main>
-
-      <footer>
-
-      </footer>
-
     </div>
 
     <!-- script -->
