start timline css fix

--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
         </div>
         <div class="about-section-2" id="when">
           <div  class="about-title"> When; a timeline of me!</div>
+          <div class="timeline">
+            <div class="timeline-start"></div>
+            <div class="timeline-point"></div>
+            <div class="timeline-end"></div>
+
+            </div>
+          </div>
         </div>
         <div class="about-section-1" id="why">
           <div class="about-title"> Why don't you make your own personal website?</div>
