--- a/index.html
+++ b/index.html
@@ -100,13 +100,25 @@
         <div class="about-section-2" id="when">
           <div  class="about-title"> When; a timeline of me!</div>
           <div class="timeline">
-            <div class="timeline-start"></div>
-            <div class="timeline-point"></div>
-            <div class="timeline-end"></div>
+            <div class="timeline-start">
+              <div class="timeline-info">1991: Born</div>
+            </div>
+            <div class="timeline-point point-1">
+              <div class="timeline-info">2003: Learn to snowboard</div>
+            </div>
+            <div class="timeline-point point-2">
+              <div class="timeline-info">2009: Graduate high school</div>
+            </div>
+            <div class="timeline-point point-3">
+              <div class="timeline-info">2012: Buy a house</div>
+            </div>
+            <div class="timeline-point point-4">
+              <div class="timeline-info">2015: Move to San Diego</div>
+            </div>
 
             </div>
           </div>
-        </div>
+
         <div class="about-section-1" id="why">
           <div class="about-title"> Why don't you make your own personal website?</div>
           <div class="center">
