--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </div>
           <div class="what-item">
             <div class="what-icon bike-icon"></div>
-            <div class="what-info">I like to ride my bicycle, I like to ride my bike. It is so fun to ride my beach cruiser to the ocean and feel the see breeze.</div>
+            <div class="what-info">I like to ride my bicycle, I like to ride my bike. It is so fun to ride my beach cruiser to the ocean and feel the sea breeze.</div>
           </div>
           <div class="what-item">
             <div class="what-icon gamer-icon"></div>
