Hard code html changed to js

--- a/index.html
+++ b/index.html
@@ -28,12 +28,7 @@
             <div><span>Jason</span><span class="last-name">Gerlach</span></div>
           </div>
           <div class="navi-btns">
-            <div class="navi-btn"><a class="header-a" href="#who">Who</a></div>
-            <div class="navi-btn"><a class="header-a" href="#what">What</a></div>
-            <div class="navi-btn"><a class="header-a" href="#where">Where</a></div>
-            <div class="navi-btn"><a class="header-a" href="#when">When</a></div>
-            <div class="navi-btn"><a class="header-a" href="#why">Why</a></div>
-            <div class="navi-btn"><a class="header-a" href="#how">How</a></div>
+            <div class="navi-btn" id="navi-btn">
           </div>
         </div>
       </header>
@@ -56,45 +51,12 @@
         </div>
         <div class="about-section-2" id="what">
           <div class="about-title"> What I Like!</div>
-          <div class="what-item">
-            <div class="what-icon code-icon"></div>
-            <div class="what-info">I like to code because I like to create. If you can dream it you can do it with coding.</div>
-          </div>
-          <div class="what-item">
-            <div class="what-icon mtn-icon"></div>
-            <div class="what-info"> I like to snowboard because it is theraputic. Snowbaording no matter what skill level is always a great time.</div>
-          </div>
-          <div class="what-item">
-            <div class="what-icon weight-icon"></div>
-            <div class="what-info">I like to lift weights because it feels good. It helps keep my energy levels high and me healthy.</div>
-          </div>
-          <div class="what-item">
-            <div class="what-icon bike-icon"></div>
-            <div class="what-info">I like to ride my bicycle, I like to ride my bike. It is so fun to ride my beach cruiser to the ocean and feel the sea breeze.</div>
-          </div>
-          <div class="what-item">
-            <div class="what-icon gamer-icon"></div>
-            <div class="what-info">I like to play video games because I like overcoming challenges. Always a fun fallback of entertainment whether it is a sports game or a fantasy game.</div>
-          </div>
+          <div class="what-item" id="what-item"></div>
         </div>
         <div class="about-section-3" id="where">
           <div class="about-title"> Where I am from!</div>
           <div class="where-container">
-            <div class="place-container place-1">
-              <div class="place-img redding"></div>
-              <div class="place-title"><a href="https://en.wikipedia.org/wiki/Redding,_California" target="_blank">Redding California</a></div>
-              <div class="place-info">I spent most of my life in <a href="https://en.wikipedia.org/wiki/Redding,_California" target="_blank">Redding California</a>. It is where I grew up. All my best friends are from here. It has two lakes and Mount Shasta is close by. It is a great place for being outdoors.</div>
-            </div>
-            <div class="place-container place-2">
-              <div class="place-img ashland"><a href=""></a></div>
-              <div class="place-title"><a href="https://en.wikipedia.org/wiki/Ashland,_Oregon" target="_blank">Ashland Oregon</a></div>
-              <div class="place-info">For a short time I lived in a small town called <a href="https://en.wikipedia.org/wiki/Ashland,_Oregon" target="_blank">Ashland Oregon</a>. Even though I lived here for only one year I made lots of new friends and went on many adventures. I would snowboard the local mountain daily. </div>
-            </div>
-            <div class="place-container place-3">
-              <div class="place-img sd"><a href=""></a></div>
-              <div class="place-title"><a href="https://en.wikipedia.org/wiki/San_Diego" target="_blank">San Diego California</a></div>
-              <div class="place-info">I currently live in <a href="https://en.wikipedia.org/wiki/San_Diego" target="_blank">San Diego California</a> and I love it. I enjoy cruising the beach on my bike and trying the local breweries. There are a lot of events to go to like concerts and comedy shows which I am fond of.</div>
-            </div>
+            <div class="place-container" id="where-item"></div>
           </div>
         </div>
         <div class="about-section-2" id="when">
@@ -113,12 +75,10 @@
               <div class="timeline-info">2012: Buy a house</div>
             </div>
             <div class="timeline-point point-4">
-              <div class="timeline-info">2015: Move to San Diego</div>
-            </div>
-
+              <div class="timeline-info">2016: Move to San Diego</div>
             </div>
           </div>
-
+        </div>
         <div class="about-section-1" id="why">
           <div class="about-title"> Why don't you make your own personal website?</div>
           <div class="center">
